fix player width, fix x-axis eternal on mymoves, start toggle utton for visibility of mymoves some additionally styling

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,9 +1,39 @@
 body {
-    background-color: orange;
+    background-color: ivory;
 }
 
 a {
   text-decoration: none;
+}
+
+.hidden{
+  display: none;
+}
+
+.c-wrapper{
+    width: 80%; 
+    margin: auto;
+}
+
+.carousel-inner img{
+width: 100%; 
+margin: auto;
+}
+
+.tallness {
+  min-height: 95%;
+  margin: 4px 0;
+}
+
+.filter{
+  display: inline;
+}
+
+.vid-wrapper {
+  width: 88vw;
+}
+video {
+  margin: auto;
 }
 
 .lotusBG {
@@ -24,8 +54,9 @@ a {
 .my-moves-panel {
   max-height: 35vh;
   overflow-x: scroll;
-  /* display: inline-bloc; */
-  /* flex-wrap: nowrap; */
+  overflow-y: hidden;
+  display: block;
+  white-space: nowrap;
 }
 
 .sequence-play-img {
@@ -38,14 +69,15 @@ a {
 }
 
 .minicard {
+  display: inline-block;
   margin: 3px 3px 3px 0; 
   padding: 1px; 
-  float: left; 
-  width: 220px; 
-  height: 300px; 
+  width: 170px; 
+  height: 155px; 
   font-size: 0.9em; 
   text-align: center; 
   background-color: white;
+  white-space: normal;
 }
 
 .sortable li { 
@@ -92,10 +124,14 @@ color: rgba(0, 0, 0, 0.61);
 -moz-transition: all 01.5s ease-out 0;
 transition: all 04.5s ease-out 0;
 position: fixed;
-top: 20px;
+top: 0px;
 right: 20px;
 z-index: 1;
 cursor: pointer;
+background-color: lightgrey;
+padding: 4px;
+border-radius: 5px;
+/* opacity: .7; */
 }
 
 .sidebar {
@@ -108,7 +144,7 @@ right: -2000px;
 transition: all 01.5s ease-out 10;
 width: 40%;
 padding: 1.5em;
-background: #19C4BC; 
+background: aquamarine; 
 overflow-y: scroll;
 }
 
@@ -138,7 +174,7 @@ right: 0px;
  }
 
 #slide:checked + .container .toggle {
-right: 42%;
+right: 40%;
  }
 
 
